--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ flask = "2.2.2"
 flask-migrate = "3.1.0"
 flask-sqlalchemy = "2.5.1"
 ipdb = "0.13.9"
+importlib-metadata = "6.0.0"
+importlib-resources = "5.10.0"
 
 [requires]
 python_full_version = "3.8.13"
